syntax = "proto3";
import "common.proto";
import "league.proto";
import "const_define.proto";
//玩家登陆
message GamerLoginC2S
{
	 int32  id      = 1;//玩家id
	 string session = 2;//快速重连session，正常登陆不用填
	 string addr = 3;  //代理使用
}

//玩家登陆
message GamerLoginS2C
{
	 int32 error = 1;
	 GamerMain main = 2;             //玩家主信息
}

message GamerLoginGetDataC2S
{
	 int32 id = 1;				//玩家id
}

message GamerLoginGetDataS2C
{
	 int32 error = 1;
	 ServerTime time = 2;  //服务器当前时间
	 repeated GamerFriendRequest friendReqs = 3;
	 repeated GamerFriend friends = 4;
	 int32 lengthRank = 5;
}

// 服务器时间
message ServerTimeC2S
{
   int32 id = 1;
}

// 服务器时间
message ServerTimeS2C
{
	 int32 error = 1;
	 ServerTime time = 2;  //服务器当前时间
}

message GamerNotifyLoginOtherS2C
{
    int32 error = 1;
}

message GamerSubChatChannelC2S
{
	 int32 id = 1;				//玩家id
	 int32 channel = 2;
	 bool open = 3;
}

message GamerSubChatChannelS2C
{
	 int32 error = 1;				//玩家id
}

//--------------------------------------------------------------------------社交
//好友聊天
message GamerFriendChatC2S
{
	 int32 id = 1;	//个人id
     int32 toId = 2;   //接收好友id
     string msg = 3;  //聊天内容
}

//好友聊天
message GamerFriendChatS2C
{
	 int32 error = 1;
}

//世界聊天
message GamerWorldChatC2S
{
	 int32 id = 1;	//个人id
	 int32 server = 2;//服务器
     string msg = 3;  //聊天内容
}

//世界聊天
message GamerWorldChatS2C
{
	 int32 error = 1;
}

//好友聊天
message GamerTestChatC2S
{
	 int32 id = 1;	//个人id
     int32 toId = 2;   //接收好友id
     string msg = 3;  //聊天内容
}

//好友聊天
message GamerTestChatS2C
{
	 int32 error = 1;
	 int32 id = 2;	//个人id
}

//好友聊天
message GamerClubRequestC2S
{
	 int32 id = 1;	//个人id
     int32 clubId = 2;   //接收好友id
     string msg = 3;  //聊天内容
}

//好友聊天
message GamerClubRequestS2C
{
    int32 error = 1;
	int32 id = 2;	//个人id
    bool ok = 3;
}

message GamerNotifyNewChatS2C
{
    int32 error = 1;
    repeated ChatData chats = 2;
}

message GamerNewFriendReqC2S
{
    int32 id = 1;  //玩家id
    int32 oid = 2; //对方id
    string msg = 3;//说的话
}

message GamerNewFriendReqS2C
{
    int32 error = 1;
}

message GamerNotifyNewFriendReqS2C
{
    int32 error = 1;
    GamerFriendRequest request = 2;
}

message GamerProcessFriendReqC2S
{
    int32 id = 1;   //玩家id
    int32 oid = 2;  //对方id
    bool result = 3;//结果  接受  拒绝
}

message GamerProcessFriendReqS2C
{
    int32 error = 1;
}

message GamerNotifyNewFriendS2C
{
    int32 error = 1;
    GamerFriend friend = 2;
}

//---------------------------------邮件-------------------------------------------//
message GamerNotifyMailS2C
{
    int32 error = 1;
    int32 leftMailNum = 2;
    repeated Mail mails = 3;
}

message GamerNotifyNewMailS2C
{
    int32 error = 1;
    repeated Mail mails = 2;
}

message GamerGetMailC2S
{
    int32 id = 1;
}

message GamerGetMailS2C
{
    int32 error = 1;
}

message GamerDelMailC2S
{
    int32 id = 1;
    string mailId = 2;
}

message GamerDelMailS2C
{
    int32 error = 1;
}

message GamerDelHaveReadMailC2S
{
    int32 id = 1;
}

message GamerDelHaveReadMailS2C
{
    int32 error = 1;
}

message GamerOneKeyRcvMailRewardC2S
{
    int32 id = 1;
}

message GamerOneKeyRcvMailRewardS2C
{
    int32 error = 1;
}

message GamerChangeMailStateC2S
{
    int32 id = 1;
    string mailId = 2;
    MailState state = 3;
}

message GamerChangeMailStateS2C
{
    int32 error = 1;
}

//--------------------------------------------------------------------------社交

//--------------------------------------------------------------------------匹配
message GamerMatchC2S
{
    int32 id = 1;   //玩家id
    int32 type = 2;
}

message GamerMatchS2C
{
    int32 error = 1;
}

message GamerNotifyMatchInfoS2C
{
    int32 error = 1;
    MatchInfo matchInfo = 2;
    bool reconn = 3;
}

message GamerPVPSyncC2S
{
    int32 id = 1;   //玩家id
	string  session = 2;
	PVPInput input = 3;
	repeated int32 needFrames = 4;
	repeated uint64  crc = 5;//CRC校验
	repeated PVPInput agents = 6;//ai托管序列
	bool reconn = 7;//断线重连
	int32 index = 8;
	string addr = 9;
	PVPResult result = 10;
}

message GamerPVPSyncS2C
{
	int32 error = 1;
}

message GamerNotifyPVPSyncS2C
{
    int32 maxFrameCount = 1;
    repeated PVPFrame frames = 2;
    bytes framesData = 3;
    repeated bytes frameData = 4;
    int32 index = 5;
    int32 delta = 6;
    string session = 7;
}

message GamerNotifyNewPVPResultS2C
{
    int32 error = 1;
    int32 icon = 2;
    int32 oldLengthRank = 3;
    int32 newLengthRank = 4;
    PVPResult result = 5;
}

message GamerNotifyIconChangeS2C
{
    int32 error = 1;
    int32 icon = 2;
}


message GamerGetRealTimeRankC2S
{
    int32 id = 1;
}

message GamerGetRealTimeRankS2C
{
    int32 error = 1;
    repeated RankLength ranks = 2;
}

message GamerCheckPVPBattleC2S
{
    int32 id = 1;
    string session = 2;
}

message GamerCheckPVPBattleS2C
{
    int32 error = 1;
    MatchInfo matchInfo = 2;
}

message GamerUploadWXInfoC2S
{
    int32 id = 1;
    WXInfo wxInfo = 2;
}

message GamerUploadWXInfoS2C
{
    int32 error = 1;
}


//创建联盟
message CreateLeagueC2S
{
     int32 id = 1;  //个人id
     string name =2;    //联盟名字
     string declaration = 3;//宣言
}

//创建联盟返回
message CreateLeagueS2C
{
    int32 error = 1;
    LeagueData data =2;
}

//玩家上线推送联盟数据
message GamerNotifyLeagueDataS2C
{
    int32 error = 1;
    LeagueData data = 2; //联盟数据
    repeated int32 onlineGamerList =3;//在线玩家列表
}

//玩家上线告知其他在线玩家
message GamerNotifyLeagueGamerOnlineS2C
{
    int32 error = 1;
    int32 gid =2;
}


//--------------------------------背包-------------------------------------------//
message GamerGetBackpackC2S
{
    int32 id = 1;
}

message GamerGetBackpackS2C
{
    int32 error = 1;
    repeated GameItem items = 2;
}

//单个道具更变消息
message GamerNotifyItemS2C
{
    int32 error = 1;
    GameItem item = 2;
}

message GamerSellItemC2S
{
    int32 id = 1;
    int32 itemId = 2;
    int32 num = 3;
}

message  GamerSellItemS2C
{
    int32 error = 1;
}

message GamerUseItemC2S
{
    int32 id = 1;
    int32 itemId = 2;
    int32 num = 3;
}

message  GamerUseItemS2C
{
    int32 error = 1;
}

message GamerCompoundItemC2S
{
    int32 id = 1;
    int32 itemId = 3;
    int32 num = 4;
}

message  GamerCompoundItemS2C
{
    int32 error = 1;
}

message GamerSplitItemC2S
{
    int32 id = 1;
    int32 itemId = 2;
    int32 num = 3;
}

message  GamerSplitItemS2C
{
    int32 error = 1;
}

message GamerNotifyItemChangeS2C
{
    int32 error = 1;
    repeated GameItem itemsChange = 2;
}

//***************艺人****************//
message GamerGetActorListC2S
{
    int32 id = 1;
}

message  GamerGetActorListS2C
{
    int32 error = 1;
    int32 maxActorNum = 2;
    repeated Actor actors = 3;
}

message GamerChangeActorNameC2S
{
    int32 id = 1;
    int32 actorId = 2;
    string name = 3;
}

message  GamerChangeActorNameS2C
{
    int32 error = 1;
}

message GamerActorUpLevelC2S
{
    int32 id = 1;
    int32 actorId = 2;
}

message  GamerActorUpLevelS2C
{
    int32 error = 1;
}

message GamerNotifyActorChangeS2C
{
    int32 error = 1;
    Actor actor = 2;
}

//--------------------------------GM-------------------------------------------//
message GMC2S
{
    int32 id = 1;
    string gm = 2;
}

message GMS2C
{
   int32 error = 1;
}

//***************剧本系统****************//

message GamerNotifyStoryListS2C
{
    int32 error = 1;
    repeated int32 storyIdList =2;
    repeated int32 storyGroupList =3;
}

//**********************建筑系统****************//

//上线通知建筑信息
message GamerNotifyBuildInfoS2C
{
    int32 error = 1;
    repeated BuildInfo buildInfo = 2;
}


//建筑创建和升级
message BuildLevelUpC2S
{
    int32 id = 1;
    int32 buildType =2; //建筑Id
}

message BuildLevelUpS2C
{
    int32 error = 1;
    BuildInfo buildInfo = 2;
}

//升级成功
message BuildEndOfLevelUpC2S
{
    int32 id = 1;
    int32 buildType =2; //建筑Id
}

message BuildEndOfLevelUpS2C
{
    int32 error = 1;
    BuildInfo buildInfo = 2;
}


//建筑突破
message BuildBreakUpC2S
{
    int32 id = 1;
    int32 buildType =2;//建筑Id
}

message BuildBreakUpS2C
{
    int32 error = 1;
    BuildInfo buildInfo = 2;
}

//建筑升级加速
message BuildSpeedUpC2S
{
    int32 id = 1;
    int32 buildType =2;//建筑Id
    SpeedUpType speedUpType =3; //加速类型
}

message BuildSpeedUpS2C
{
    int32 error = 1;
    BuildInfo buildInfo = 2;
}

message BuildGetProductC2S
{
    int32 id = 1;
    int32 buildType =2;
}

message BuildGetProductS2C
{
    int32 error = 1;
    int32 buildType =2;
    BuildProduct productInfo =3;
}

//艺人进驻建筑
message ActorEnterBuildC2S
{
    int32 id = 1;
    int32 actorId =2; //艺人id
    int32 cellId =3; //槽位id
}

//艺人进驻建筑
message ActorEnterBuildS2C
{
    int32 error = 1;
    int32 buildType =2;
    BuildActorCell actorCell = 3;
}


////艺人退出建筑
message ActorLeaveBuildC2S
{
    int32 id = 1;
    int32 actorId =2; //艺人id
    int32 cellId =3; //槽位id
}


//艺人退出建筑
message ActorLeaveBuildS2C
{
    int32 error = 1;
    int32 buildType =2;
    BuildActorCell actorCell = 3;
}

//**********************情报系统****************//
message GamerNotifyIntelligenceS2C
{
    int32 error = 1;
    int32 extractNum = 2;
    repeated Intelligence intelligences = 3;
}

message GamerGetIntelligenceC2S
{
    int32 id = 1;
}

message  GamerGetIntelligenceS2C
{
    int32 error = 1;
    int32 extractNum = 2;
    repeated Intelligence intelligences = 3;
}

message GamerExtractIntelligenceC2S
{
    int32 id = 1;
    int32 num = 2;//抽取次数
}

message GamerExtractIntelligenceS2C
{
    int32 error = 1;
    repeated Intelligence intelligences = 2;
}

message GamerIntelligenceTreasureChestC2S
{
    int32 id = 1;
}

message GamerIntelligenceTreasureChestS2C
{
    int32 error = 1;
    repeated GameItem items = 2;
}

message GamerIntelligenceParseC2S
{
    int32 id = 1;
    repeated int32 intelligencesId = 2;
}

message GamerIntelligenceParseS2C
{
    int32 error = 1;
    Actor actor = 2;
    repeated GameItem items = 3;
}


//*************************************拍摄系统*************************************************\\
//拍摄
message StudioC2S
{
    int32 id = 1;
}

message StudioS2C
{
    int32 error = 1;                       
    StudioData data = 2;        // 拍摄数据
}



//拍摄--剧本列表, step==StudioStep.requestStoryList
message StudioStoryListC2S
{
    int32 id = 1;
}

message StudioStoryListS2C
{
     int32 error = 1;                       
     repeated StudioStory storys = 2;       // 剧本列表
}


//拍摄--选择剧本
message StudioStorySelectC2S
{
    int32 id = 1;
    int32 storyId   = 2;                //剧本ID
    string name     = 3;                //剧本名称
}

message StudioStorySelectS2C
{
    int32 error = 1;                    //反馈, 0成功, 1名称不符
}

//拍摄--选择艺人
message StudioActorSelectC2S
{
    int32 id = 1;
    int32 storyCharactersId     = 2;                //艺人槽位ID
    int32 actorId               = 3;                //艺人ID
}

message StudioActorSelectS2C
{
    int32 error                 = 1;                //反馈, 0成功, 1选择艺人槽位不符
    int32 storyCharactersId     = 2;                //艺人槽位ID
    int32 actorId               = 3;                //艺人ID
    int32 cost                  = 4;                //消耗行动力
}

//拍摄--事件
message StudioEventS2C
{
    int32                   error           = 1; 
    int32                   eventId         = 2;                            //事件ID
    StudioEventType         eventType       = 3;                            //事件类型
}

//拍摄--事件--选择选项
message StudioEventOptionSelectC2S
{
    int32 id = 1;
    int32 eventOption       = 2;                            //事件选项
}

message StudioEventOptionSelectS2C
{
    int32 error                             = 1; 
    int32 eventId                           = 2;        //事件ID
    int32 eventType                         = 3;        //事件类型
    int32 eventOption                       = 4;        //事件选项
    repeated int32 eventEvaluations         = 5;        //事件评价列表
}


//拍摄--开始,事件结束后就是开始
message StudioStarC2S
{
    int32 id = 1;
}

message StudioStarS2C
{
    int32 error                 = 1;                //反馈, 0成功, 1行动力不足，2上阵艺人不足
    StudioData data             = 2;                // 拍摄数据
}

//拍摄--继续下一步骤
message StudioNextStepC2S
{
    int32 id = 1;
}


message StudioNextStepS2C
{
    int32                   error               = 1;
    StudioStep              step                = 2;            // 步骤
}


//==========================================================
// 拍摄后期收益
//-----------------------------------------------------------

//拍摄后期收益--数据列表
message StudioContinuedListC2S
{
    int32 id = 1;           
}

message StudioContinuedListS2C
{
    int32                                       error       = 1;
    repeated StudioContinuedData                list        = 2;                //拍摄后期收益数据列表
}



//拍摄后期收益--获取收益
message StudioContinuedReceiveC2S
{
    int32 id = 1;
    int32 uid = 2;                  
}

message StudioContinuedReceiveS2C
{
    int32                               error       = 1;
    StudioContinuedData                 item        = 2;            
}


//拍摄后期收益--获取所有收益
message StudioContinuedReceiveAllC2S
{
    int32 id = 1;               
}

message StudioContinuedReceiveAllS2C
{
    int32                               error       = 1;
    repeated StudioContinuedData        list        = 2;                //拍摄后期收益数据列表    
}
